flow-ingest/base/cronjob-compact.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flow-compact
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: flow-compact
  # 受け口を持たない(誰からも接続されない)。
  ingress:
    - {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - {port: "53", protocol: UDP}
            - {port: "53", protocol: TCP}
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: trino
            app.kubernetes.io/name: trino
      toPorts:
        - ports:
            - {port: "8080", protocol: TCP}
